test/scc/expr/semantic-errors/117.a
117.t:6:11: error: invalid initializer